feat: add google analytics

--- a/config.toml
+++ b/config.toml
@@ -714,12 +714,12 @@ uglyURLs = false
     # Note: render only in production
     #       environment
 
-    enableGoogleAnalytics = false
+    enableGoogleAnalytics = true
 
     trackingCodeType = "gtag"
     # Note: gtag or analytics
 
-    trackingID = ""
+    trackingID = "UA-139983727-1"
 
 
     ######################################
