deploy: 4df70790d46d2e9553b75ae9c8a040fb3ec8d78b

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Hugo Theme MemE",
-    "short_name": "MemE",
+    "name": "东隅已逝｜桑榆非晚",
+    "short_name": "h1z3y3",
     "icons": [
         {
             "src": "./icons/android-chrome-512x512.png",
