fix: error link

--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -21,7 +21,7 @@ contributors:
 
   - display_name: "Cuetorials"
     avatar: "https://avatars.githubusercontent.com/u/1390600"
-    profile: "https://github.com/NReilingh"
+    profile: "https://cuetorials.com/contribute/"
     description: "CUE 是一门逻辑语言，专门用于处理配置、结构、数据并执行它们。"
 
   - display_name: "卡拉云"
