chore: add friend links

--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -28,3 +28,8 @@ contributors:
     avatar: "https://raw.githubusercontent.com/h1z3y3/h1z3y3.github.io/master/static/avatars/kalacloud.jpeg"
     profile: "https://kalacloud.com/"
     description: "可以帮你快速搭建后台系统，多有时间专注核心业务，提升企业运营效率。"
+
+  - display_name: "CYYJS"
+    avatar: "https://avatars.githubusercontent.com/u/2883079?v=4"
+    profile: "https://github.com/cyyjs"
+    description: "Cyy的个人网站、博客、全栈开发技术分享"
