chore: add friend links

--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -31,5 +31,10 @@ contributors:
 
   - display_name: "CYYJS"
     avatar: "https://avatars.githubusercontent.com/u/2883079?v=4"
-    profile: "https://github.com/cyyjs"
+    profile: "https://cyyjs.top/"
     description: "Cyy的个人网站、博客、全栈开发技术分享"
+
+  - display_name: "咀嚼之味"
+    avatar: "https://avatars.githubusercontent.com/u/1888508?v=4"
+    profile: "https://jerryzou.com/"
+    description: "关于JS的文章写的非常棒。润阳是少数技能能力出众且写作也超群的工程师，非常推荐"
