chore: add friend links

--- a/data/contributors.yaml
+++ b/data/contributors.yaml
@@ -38,3 +38,8 @@ contributors:
     avatar: "https://avatars.githubusercontent.com/u/1888508?v=4"
     profile: "https://jerryzou.com/"
     description: "关于JS的文章写的非常棒。润阳是少数技能能力出众且写作也超群的工程师，非常推荐"
+
+  - display_name: "Stephen's Blog"
+    avatar: "https://www.stephen520.cn/storage/images/201911/688286d1aee05a71a55943d2b8436ced.jpg"
+    profile: "https://www.stephen520.cn/"
+    description: "心有猛虎，细嗅蔷薇。来自8D魔幻城市—重庆，一直努力行走在全栈的路上。"
