--- a/data/links.yaml
+++ b/data/links.yaml
@@ -1,4 +1,4 @@
-contributors:
+links:
   - display_name: "敬维"
     avatar: "https://avatars.githubusercontent.com/u/8602043?v=4"
     profile: "https://jingwei.link/"
