--- a/.github/workflows/update-emo.yml
+++ b/.github/workflows/update-emo.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0/5 * * * *'
 
 jobs:
-  deploy:
+  update-emo:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -26,3 +26,35 @@ jobs:
         with:
           github_token: ${{ secrets.TG_GITHUB_TOKEN }}
           branch: master
+  deploy:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          # extended: true
+
+      - name: Build
+        run: hugo --minify
+
+      - uses: "finnp/create-file-action@master"
+        env:
+          FILE_NAME: "./public/CNAME"
+          FILE_DATA: "h1z3y3.me"
+
+      - uses: "finnp/create-file-action@master"
+        env:
+          FILE_NAME: "./public/webpushr-sw.js"
+          FILE_DATA: "importScripts('https://cdn.webpushr.com/sw-server.min.js');"
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
