--- a/.github/workflows/update-emo.yml
+++ b/.github/workflows/update-emo.yml
@@ -1,32 +1,45 @@
 name: update emo
 
 on:
-  schedule:
-    - cron: '0/5 * * * *'
-
+  push:
+    branches:
+      - emo-update
 jobs:
-  update-emo:
+  update_emo:
     runs-on: ubuntu-18.04
+    outputs:
+      update_result: ${{ steps.update.outputs.update_result }}
     steps:
       - uses: actions/checkout@v2
         with:
+          ref: emo-update
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-
       - name: update
+        id: update
         uses: cedrickring/golang-action@1.6.0
         env:
           PROJECT_PATH: "./timeline/generate_yaml"
           TG_M3O_TOKEN: ${{ secrets.TG_M3O_TOKEN }}
         with:
-          args: make run
+          args: echo "::set-output name=update_result::$(/usr/local/go/bin/go build -o app && ./app)"
 
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
           github_token: ${{ secrets.TG_GITHUB_TOKEN }}
-          branch: master
-          
+          branch: emo-update
+  update_page:
+    if: needs.update_emo.outputs.update_result == 'success'
+    runs-on: ubuntu-18.04
+    needs: update_emo
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: emo-update
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
