--- a/data/emo/emo202206.yaml
+++ b/data/emo/emo202206.yaml
@@ -4,12 +4,14 @@ list:
   content: "花了一天多时间，终于把这个 emo list 完成了，感谢 @ankang 帮忙做的一些前端工作 \U0001F44F\U0001F3FB\U0001F44F\U0001F3FB\U0001F44F\U0001F3FB
     后续应该还要支持图片，争取明天完成 ✊\U0001F3FB"
   timestamp: 1654366021
+  images: []
 - id: f4e813fe-cf6a-4fab-a18b-727531e562a4
   content: test
   timestamp: 1654410090
+  images: []
 - id: b86fa694-0438-4582-a07f-f32dfef665b2
   content: test
-  timestamp: 1654416443
-- id: 19774946-4950-48ce-8124-9fe87812ff84
-  content: hahaha
-  timestamp: 1654416642
+  timestamp: 1654439818
+  images:
+  - https://raw.githubusercontent.com/h1z3y3/h1z3y3.github.io/emo-update/images/photos/file_1.jpg
+  - https://raw.githubusercontent.com/h1z3y3/h1z3y3.github.io/emo-update/images/photos/file_4.jpg
