--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   update_emo:
     runs-on: ubuntu-18.04
+    env:
+      TZ: Asia/Shanghai
     outputs:
       update_result: ${{ steps.update.outputs.update_result }}
     steps:
@@ -34,6 +36,8 @@ jobs:
   deploy:
     needs: update_emo
     runs-on: ubuntu-18.04
+    env:
+      TZ: Asia/Shanghai
     steps:
       - uses: actions/checkout@v2
         with:
