--- a/timeline/telegram_bot/Dockerfile
+++ b/timeline/telegram_bot/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /go/src/app
 
 RUN go build -v -o app . && chmod a+x app
 
-FROM r.so.qihoo.net/library/alpine:3.11
+FROM alpine:3.11
 
 COPY --from=builder /go/src/app/app .
 
