--- a/config.toml
+++ b/config.toml
@@ -370,7 +370,7 @@ uglyURLs = false
     siteLogo = "/icons/apple-touch-icon.png"
     # Note: used for JSON-LD, Open Graph
 
-    siteDescription = "MemE is a powerful and highly customizable GoHugo theme for personal blogs."
+    siteDescription = "专注于服务端开发，喜欢折腾，喜欢最新科技产品"
     # Note: used for HTML head meta, JSON-LD,
     #       Open Graph, Atom, RSS
 
