fix: add display name

--- a/data/links.yaml
+++ b/data/links.yaml
@@ -9,7 +9,7 @@ links:
     profile: "http://www.xtgxiso.com/"
     description: "我是从事LAMP平台下互联网项目的老兵(张素杰)。"
 
-  - display_name: ""
+  - display_name: "DigDeeply"
     avatar: "https://avatars.githubusercontent.com/u/1439346?v=4"
     profile: "https://fukun.org/"
     description: "DigDeeply，专业IT。技能：架构设计、PHP、PHP扩展、Golang、OpenResty、Python、K8S ..."
